--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,6 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.mytest.DisplayMessageActivity"
+            android:label="@string/title_activity_display_message"
+            android:parentActivityName="com.example.mytest.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mytest.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.mytest.AnotherActivity"
+            android:label="@string/title_activity_another"
+            android:parentActivityName="com.example.mytest.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mytest.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
